//
//  TeplocomCloudUITests.swift
//  TeplocomCloudUITests
//
//  Created by Роман Елфимов on 10.10.2022.
//

import XCTest

class TeplocomCloudUITests: XCTestCase {

    override func setUp() {
        super.setUp()
        continueAfterFailure = false

    }

    override func tearDown() {

        super.tearDown()
    }

    func testExample() throws {
//        let app = XCUIApplication() // Запускаем симулятор
//        app.launch()
//         
//        app.navigationBars["TEPLOCOM CLOUD"].buttons["drag"].tap()
//        
//        let tablesQuery = app.tables
//        tablesQuery/*@START_MENU_TOKEN@*/.staticTexts["Датчики"]/*[[".cells.staticTexts[\"Датчики\"]",".staticTexts[\"Датчики\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
//        tablesQuery/*@START_MENU_TOKEN@*/.staticTexts["Test 1"]/*[[".cells.staticTexts[\"Test 1\"]",".staticTexts[\"Test 1\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
//        tablesQuery/*@START_MENU_TOKEN@*/.textFields["Введите наименование датчика"]/*[[".cells.textFields[\"Введите наименование датчика\"]",".textFields[\"Введите наименование датчика\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
//        
//        let deleteKey = app/*@START_MENU_TOKEN@*/.keys["delete"]/*[[".keyboards.keys[\"delete\"]",".keys[\"delete\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/
//        deleteKey.tap()
//        deleteKey.tap()
//        deleteKey.tap()
//        deleteKey.tap()
//        deleteKey.tap()
//        deleteKey.tap()
//        deleteKey.tap()
//        deleteKey.tap()
//        
//        let tKey = app/*@START_MENU_TOKEN@*/.keys["T"]/*[[".keyboards.keys[\"T\"]",".keys[\"T\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/
//        tKey.tap()
//        
//        let eKey = app/*@START_MENU_TOKEN@*/.keys["e"]/*[[".keyboards.keys[\"e\"]",".keys[\"e\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/
//        eKey.tap()
//        
//        let sKey = app/*@START_MENU_TOKEN@*/.keys["s"]/*[[".keyboards.keys[\"s\"]",".keys[\"s\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/
//        sKey.tap()
//
//        let tKey2 = app/*@START_MENU_TOKEN@*/.keys["t"]/*[[".keyboards.keys[\"t\"]",".keys[\"t\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/
//        tKey2.tap()
//        
//        let navigationBar = app.navigationBars["Настройки датчика"]
//        navigationBar.buttons["Сохранить"].tap()
//        app.alerts["Успешно"].scrollViews.otherElements.buttons["Ок"].tap()
//        navigationBar.buttons["Отмена"].tap()
//        
//        XCTAssertTrue(app.tables.cells.staticTexts["Test 1"].exists)
    }
}
